# stellars_jupyterlab_fixes

./: .gitignore  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md  JOURNAL.md
.github/workflows/: build.yml  check-links.yml
stellars_jupyterlab_fixes/: __init__.py
