[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stellars_jupyterlab_fixes"
version = "1.0.6"
description = "Metapackage aggregating all Stellars JupyterLab fixes"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Konrad Jelen", email = "konrad.jelen+github@gmail.com"}
]
keywords = ["jupyterlab", "jupyter", "extensions", "fixes"]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "jupyterlab_change_ui_font_size_fix",
    "jupyterlab_jump_to_definition_fix",
    "jupyterlab_markdown_switch_tab_scrolling_fix",
    "jupyterlab_markdown_viewer_toc_fix",
    "jupyterlab_server_proxy_launcher_fix",
    "jupyterlab_terminal_cpr_escape_fix",
]

[project.urls]
Homepage = "https://github.com/stellarshenson/stellars_jupyterlab_fixes"
Repository = "https://github.com/stellarshenson/stellars_jupyterlab_fixes"
